cmake_minimum_required(VERSION 3.24)
project(Competitive_Programming)

set(CMAKE_CXX_STANDARD 17)

add_executable(Following_Directions USACO/following-directions.cpp)
add_executable(Dance_Mooves USACO/dance-mooves.cpp)
add_executable(Cablaj InfoArena/cablaj.cpp)
add_executable(SashaAndArrayColoring CodeForces/sasha-and-array-coloring.cpp)
add_executable(LongLong CodeForces/long-long.cpp)
add_executable(SumInBinaryTree CodeForces/sum-in-binary-tree.cpp)
add_executable(AppleTree CodeForces/apple-tree.cpp)
add_executable(TrackingSegments CodeForces/tracking-segments.cpp)
add_executable(CircularBarnRevisited USACO/cbarn2.cpp)
add_executable(LeastPrefixSum CodeForces/least-prefix-sum.cpp)
add_executable(MinimizingCoins CSES/minimizing-coins.cpp)
add_executable(MaximumSet CodeForces/maximum-set.cpp)
add_executable(OutOfSorts USACO/sort.cpp)
add_executable(RitwinAndComparisons HSCSA/Contest_5_June_2023/ritwin-and-comparisons.cpp)
add_executable(PichuAndTriominoes HSCSA/Contest_5_June_2023/pichu-and-triominoes.cpp)
add_executable(AlexAndExpoMarkers HSCSA/Contest_5_June_2023/alex-expo-markers.cpp)
add_executable(ForbiddenInteger CodeForces/forbidden-integer.cpp)
add_executable(ComeTogether CodeForces/come-together.cpp)
add_executable(StrongPassword CodeForces/strong-password.cpp)
add_executable(RatingSystem CodeForces/rating-system.cpp)
add_executable(Conexidad Kilonova/conexidad.cpp)
add_executable(Dragoni Kilonova/dragoni.cpp)
add_executable(GrEA InfoArena/grea.cpp)
add_executable(Partit Kilonova/partit.cpp)
add_executable(JJOOII2 OJUZ/jjooii2.cpp)
add_executable(Frog1 AtCoder/frog1.cpp)
add_executable(Frog2 AtCoder/frog2.cpp)
add_executable(Vacation AtCoder/vacation.cpp)
add_executable(Knapsack1 AtCoder/knapsack1.cpp)
add_executable(Knapsack2 AtCoder/knapsack2.cpp)
add_executable(LCS AtCoder/lcs.cpp)
add_executable(LongestPath AtCoder/longestpath.cpp)
add_executable(Grid1 AtCoder/grid1.cpp)
add_executable(DiceCombinations CSES/dice-combinations.cpp)
add_executable(CoinCombinationsI CSES/coin-combinations-i.cpp)
add_executable(CoinCombinationsII CSES/coin-combinations-ii.cpp)
add_executable(RemovingDigits CSES/removing-digits.cpp)
add_executable(GridPaths CSES/grid-paths.cpp)
add_executable(BookShop CSES/book-shop.cpp)
add_executable(ArrayDescription CSES/array-description.cpp)
add_executable(Bitcost InfoArena/bitcost.cpp)
add_executable(Base3 InfoArena/base3.cpp)
add_executable(TheManWhoBecameAGod CodeForces/the-man-who-became-god.cpp)
add_executable(HamonOdyssey CodeForces/hamon-odyssey.cpp)
add_executable(VampiricPowers CodeForces/vampiric-powers.cpp)
add_executable(Ramen InfoArena/ramen.cpp)
add_executable(Ninjago InfoArena/ninjago.cpp)
add_executable(RudolphAndCutTheRope CodeForces/rudolph-and-cut-the-rope.cpp)
add_executable(RudolphAndTicTacToe CodeForces/rudolph-and-tic-tac-toe.cpp)
add_executable(RudolphAndAnotherCompetition CodeForces/rudolph-and-another-competition.cpp)
add_executable(RudolphAndChristmasTree CodeForces/rudolph-and-christmas-tree.cpp)
add_executable(RudolphAndSnowflakes CodeForces/rudolf-and-snowflakes.cpp)
add_executable(TeamWork USACO/teamwork.cpp)
add_executable(FlipCards AtCoder/flip-cards.cpp)
add_executable(MaxMultiple AtCoder/max-multiple.cpp)
add_executable(TimeIsMooney USACO/time.cpp)
add_executable(StampPainting USACO/stamp-painting.cpp)
add_executable(FruitFeast USACO/fruit-feast.cpp)
add_executable(IndexTimesA AtCoder/index-times-a.cpp)
add_executable(BetweenTwoArrays AtCoder/between-two-arrays.cpp)
add_executable(IHateNonIntegerNumber AtCoder/i-hate-non-integer-number.cpp)
add_executable(Cezar COCI/cezar.cpp)
add_executable(StoneGame USACO/stone-game.cpp)
add_executable(Tairos Kilonova/tairos.cpp)
add_executable(TreeMatching CSES/tree-matching.cpp)
add_executable(IndependentSet AtCoder/independent-set.cpp)
add_executable(VikaAndHerFriends CodeForces/vika-and-her-friends.cpp)
add_executable(VikaAndTheBridge CodeForces/vika-and-the-bridge.cpp)
add_executable(VikaAndPriceTags CodeForces/vika-and-price-tags.cpp)
add_executable(TreeDistancesI CSES/tree-distances-I.cpp)
add_executable(TreeDistancesII CSES/tree-distances-II.cpp)
add_executable(Subsecvente Kilonova/subsecvente.cpp)
add_executable(Interesant Kilonova/interesant.cpp)
add_executable(FineDining USACO/fine-dining.cpp)
add_executable(TalesOfASort CodeForces/tales-of-a-sort.cpp)
add_executable(GoodArrays CodeForces/good-arrays.cpp)
add_executable(ToBecomeMax CodeForces/to-become-max.cpp)
add_executable(PermuTree CodeForces/permu-tree.cpp)
add_executable(Transport2 InfoArena/transport2.cpp)
add_executable(Asmax InfoArena/asmax.cpp)
add_executable(BinaryStringCopying CodeForces/binary-string-copying.cpp)
add_executable(ArrayColoring CodeForces/array-coloring.cpp)
add_executable(MaximumRounding CodeForces/max-rounding.cpp)
add_executable(AssemblyViaMinimums CodeForces/assembly-via-minimums.cpp)
add_executable(StrongVertices CodeForces/strong-vertices.cpp)
add_executable(PowerOfPoints CodeForces/power-of-points.cpp)
add_executable(BuckepotatoFanClub LIT/buckepotato-fanclub.cpp)
add_executable(Hillington LIT/hillington.cpp)
add_executable(TreeFolding LIT/tree-folding.cpp)
add_executable(Cuplaje InfoArena/cuplaje.cpp)
add_executable(SecretulCifrului Kilonova/secretul-cifrului.cpp)
add_executable(Parcare Kilonova/parcare.cpp)
add_executable(Nrsubsecv InfoArena/nrsubsecv.cpp)
add_executable(Turcane Kilonova/turcane.cpp)
add_executable(CaveExploration Kilonova/cave-exploration.cpp)
add_executable(PolycarpAndTheDayOfPi CodeForces/polycarp-and-the-day-of-pi.cpp)
add_executable(TaisiaAndDice CodeForces/taisia-and-dice.cpp)
add_executable(Premutation CodeForces/premutation.cpp)
add_executable(Matryoshkas CodeForces/matryoshkas.cpp)
add_executable(VladAndAPairOfNumbers CodeForces/vlad-and-a-pair-of-numbers.cpp)
add_executable(UnitedWeStand CodeForces/united-we-stand.cpp)
add_executable(OlyaAndGameWithArrays CodeForces/olya-and-game-with-arrays.cpp)
add_executable(AnotherPermutationProblem CodeForces/another-permutation-problem.cpp)
add_executable(AndreyAndEscapeFromCapygrad CodeForces/andrey-and-escape-from-capygrad.cpp)
add_executable(Skyscrapers CodeForces/skyscrapers.cpp)
add_executable(Minecraft Kilonova/minecraft.cpp)
add_executable(BarnPainting USACO/barnpainting.cpp)
add_executable(248 USACO/248.cpp)
add_executable(Buttons CodeForces/buttons.cpp)
add_executable(TheWalkway CodeForces/the-walkway.cpp)
add_executable(YetAnotherPermutationProblem CodeForces/yet-another-permutation-problem.cpp)
add_executable(LeftOut USACO/leftout.cpp)
add_executable(Pictorul Kilonova/pictorul.cpp)
add_executable(IncreasingAndDecreasing CodeForces/increasing-and-decreasing.cpp)
add_executable(SwapAndReverse CodeForces/swap-and-reverse.cpp)
add_executable(DivisorChain CodeForces/divisor-chain.cpp)
add_executable(Leximin Kilonova/leximin.cpp)
add_executable(Nondecreasing Kilonova/nondecreasing.cpp)
add_executable(Papricice COCI/papricice.cpp)
add_executable(TinyTypes Kilonova/tiny-types.cpp)
add_executable(Advertisement2 JOI/advertisement2.cpp)
add_executable(CompanyQueriesII CSES/company-queries-ii.cpp)
add_executable(DistanceQueries CSES/distance-queries.cpp)
add_executable(SlothNaptime CodeForces/sloth-naptime.cpp)
add_executable(PlanetsQueriesI CSES/planets-queries-i.cpp)
add_executable(MaxFlow USACO/max-flow.cpp)
add_executable(Trampoline OJUZ/trampoline.cpp)
add_executable(Crescator Kilonova/crescator.cpp)
add_executable(DynamicRangeSumQueries CSES/dynamic-range-sum-queries.cpp)
add_executable(NumOfMinOnASegment CodeForces/number-of-min-on-a-segment.cpp)
add_executable(Inversions CodeForces/inversions.cpp)
add_executable(Suporter Kilonova/suporter.cpp)
add_executable(FennecVsSnuke AtCoder/fennec-vs-snuke.cpp)
add_executable(FireCrackers CodeForces/firecrackers.cpp)
add_executable(MinMaxSort CodeForces/min-max-sort.cpp)
add_executable(SegTreeSums CodeForces/seg-tree-sums.cpp)
add_executable(SegTreeMin CodeForces/seg-tree-min.cpp)
add_executable(SegTreeMaxSum CodeForces/seg-tree-max-sum.cpp)
add_executable(ListRemovals CSES/list-removals.cpp)
add_executable(KthOne CodeForces/k-th-one.cpp)
add_executable(FirstElementAtLeastX CodeForces/first-element-at-least-x.cpp)
add_executable(FirstElementAtLeastX2 CodeForces/first-element-at-least-x-2.cpp)
add_executable(ABgraf Kilonova/ABgraf.cpp)
add_executable(MEXanizedArray CodeForces/mexanized-array.cpp)
add_executable(FriendlyArrays CodeForces/friendly-arrays.cpp)
add_executable(ColorfulTable CodeForces/colorful-table.cpp)
add_executable(PrefixPurchase CodeForces/prefix-purchase.cpp)
add_executable(Acowdemia USACO/acowdemia-silver.cpp)
add_executable(DoYouKnowYourABCs USACO/do-you-know-your-abcs.cpp)
add_executable(Rigged CodeForces/rigged.cpp)
add_executable(ChipsOnTheBoard CodeForces/chips-on-the-board.cpp)
add_executable(MakeItAlternating CodeForces/make-it-alternating.cpp)
add_executable(InteractivegGamewithColoring CodeForces/interactive-game-with-coloring.cpp)
add_executable(NestedRangesCheck CSES/nested-ranges-check.cpp)
add_executable(CompleteBinaryTree AtCoder/complete-binary-tree.cpp)
add_executable(23 Kilonova/23.cpp)
add_executable(HiHiThereThereMagicSquare HSCSA/hihitherethere-magic-square.cpp)
add_executable(AlexRevolt2 HSCSA/alex-revolt2.cpp)
add_executable(PichuAndTetrominoes HSCSA/pichu-tetromineos.cpp)
add_executable(LunchboxAndCoins HSCSA/lunchbox-and-coins.cpp)
add_executable(SubtreeQueries CSES/subtree-queries.cpp)
add_executable(DistinctColors CSES/distinct-colors.cpp)
add_executable(ExactlyKSteps AtCoder/exactly-k-steps.cpp)
add_executable(Insule Kilonova/insule.cpp)
add_executable(ABX Kilonova/abx.cpp)
add_executable(Pascal InfoArena/pascal.cpp)
add_executable(Transfromare Kilonova/transformare.cpp)
add_executable(Sap Kilonova/sap.cpp)
add_executable(Sugubatz Kilonova/sugubatz.cpp)
add_executable(ConventionII USACO/convention-ii.cpp)
add_executable(RectangularPasture USACO/rectangular-pasture.cpp)
add_executable(IcyPerimeter USACO/icy-perimeter.cpp)
add_executable(TheGreatRevegtation USACO/the-great-revegetation.cpp)
add_executable(Cereal USACO/cereal.cpp)
add_executable(SecretCowCode USACO/secret-cow-code.cpp)
add_executable(BuildGates USACO/build-gates.cpp)
add_executable(SwapitySwapitySwap USACO/swaptiy-swapity-swap.cpp)
add_executable(Triangles USACO/triangles.cpp)
add_executable(Dances CodeForces/dances.cpp)
add_executable(YouAreSoBeautiful CodeForces/you-are-so-beautiful.cpp)
add_executable(Subway OJUZ/subway.cpp)
add_executable(Lifeguards USACO/lifeguards.cpp)
add_executable(RentalService USACO/rental.cpp)
add_executable(Mean OJUZ/mean.cpp)
add_executable(FoehnPhenomena OJUZ/foehn-phenomena.cpp)
add_executable(MaximumDistance Kilonova/max-dist.cpp)
add_executable(TornLuckyTicket CodeForces/torn-lucky-ticket.cpp)
add_executable(AntonWouldApproveThisProblem Kilonova/anton-would-approve.cpp)
add_executable(Orase Kilonova/orase.cpp)
add_executable(TripleReverseSort Kilonova/triple-reverse-sort.cpp)
add_executable(Mirror Kilonova/mirror.cpp)
add_executable(XORConstruction CodeForces/xor-construction.cpp)
add_executable(SmiloAndMonsters CodeForces/smilo-and-monsters.cpp)
add_executable(Anagram CodeForces/anagram.cpp)
add_executable(Xorstanta Kilonova/xorstanta.cpp)
add_executable(StringStreak Kilonova/string-streak.cpp)
add_executable(HillClimb Kilonova/hill-climb.cpp)
add_executable(InterestingArray Kilonova/interesting-array.cpp)
add_executable(ArithmeticEquality Kilonova/arithmetic-equality.cpp)
add_executable(BackToTheHimalayas Kilonova/back-to-the-himalayas.cpp)
add_executable(FataMorgana Kilonova/fata-morgana.cpp)
add_executable(Vaccination Kilonova/vaccination.cpp)
add_executable(MiliciaAndString CodeForces/milica-and-string.cpp)
add_executable(MilenaAndAdmirer CodeForces/milena-and-admirer.cpp)
add_executable(ColorfulGrid CodeForces/colorful-grid.cpp)
add_executable(BinaryChess Kilonova/binary-chess.cpp)
add_executable(PingPong Kilonova/ping-pong.cpp)
add_executable(WhyDidTheCowCrossTheRoadIISilver USACO/why-did-the-cow-cross-the-road-ii-silver.cpp)
add_executable(WhyDidTheCowCrossTheRoadIIISilver USACO/why-did-the-cow-cross-the-road-iii-silver.cpp)
add_executable(BerryPicking USACO/berry-picking.cpp)
add_executable(Extrapare Kilonova/extrapare.cpp)
add_executable(Triprime Kilonova/triprime.cpp)
add_executable(QpwoeirutAndInvestors HSCSA/qpwoeirut-and-investors.cpp)
add_executable(GunnAndTeamMaking HSCSA/gunn-and-teammaking.cpp)
add_executable(PichuAndPentominoes HSCSA/pichu-and-pentominoes.cpp)
add_executable(LineTrip CodeForces/line-trip.cpp)
add_executable(ChipAndRibbon CodeForces/chip-and-ribbon.cpp)
add_executable(AddDivideAndFloor CodeForces/add-divide-and-floor.cpp)
add_executable(YetAnotherMonsterFight CodeForces/yet-another-monster-fight.cpp)
add_executable(Raganama Kilonova/raganama.cpp)
add_executable(JaggedSwaps CodeForces/jagged-swaps.cpp)
add_executable(ABFlipping CodeForces/ab-flipping.cpp)
add_executable(MatchingArrays CodeForces/matching-arrays.cpp)
add_executable(CoverInWater CodeForces/cover-in-water.cpp)
add_executable(LauraAndOperations CodeForces/laura-and-operations.cpp)
add_executable(AnjiBinaryTree CodeForces/anji-binary-tree.cpp)
add_executable(SmallGCD CodeForces/small-gcd.cpp)
add_executable(Nrpits Kilonova/nrpits.cpp)
add_executable(MilkMeasurement USACO/milk-measurement.cpp)
add_executable(MultiMi Kilonova/multimi.cpp)
add_executable(Mario Kilonova/mario.cpp)
add_executable(TheBovineShuffle USACO/the-bovine-shufle.cpp)
add_executable(Trebuchet AdventOfCode/2023/1-trebuchet-part1.cpp)
add_executable(Trebuchet2 AdventOfCode/2023/1-trebuchet-part2.cpp)
add_executable(Pareidolia USACO/pareidolia.cpp)
add_executable(EmailFiling USACO/email-filing.cpp)
add_executable(EVIP Kilonova/evip.cpp)
add_executable(NXY Kilonova/nxy.cpp)
add_executable(LoanReplacement USACO/loan-replacement.cpp)
add_executable(ComfortableCows USACO/comfortable-cows.cpp)
add_executable(YearOfTheCow USACO/year-of-the-cow.cpp)
add_executable(JustGreenEnough USACO/just-green-enough.cpp)
add_executable(RedistributingGifts USACO/redistributing-gifts.cpp)
add_executable(ClosetCowWins USACO/closet-cow-wins.cpp)
add_executable(ConnectingTwoBarns USACO/connecting-two-barns.cpp)
add_executable(Cereal2 USACO/cereal2.cpp)
add_executable(BovineAcrobatics USACO/bovine-acrobatics.cpp)
add_executable(CycleCorrespondence USACO/cycle-correspondence.cpp)
add_executable(TargetPractice USACO/target-practice.cpp)
add_executable(StringImbalance Kilonova/string-imbalance.cpp)
add_executable(CatalinAndBinarySorting Kilonova/catalin-and-binary-sorting.cpp)
add_executable(FindAndReplace USACO/find-and-replace.cpp)
add_executable(MooRoute USACO/moo-route.cpp)
add_executable(XFactor Kilonova/x-factor.cpp)
add_executable(Cowpatibility USACO/cowpatibility.cpp)
add_executable(Diff Kilonova/diff.cpp)
add_executable(Inversiuni Kilonova/inversiuni.cpp)
add_executable(Moocast USACO/moocast.cpp)
add_executable(LasersAndMirrors USACO/lasers-and-mirrors.cpp)
add_executable(AwesomeArrowlandAdveture OJUZ/awesome-arrowland-adventure.cpp)
add_executable(Mostenire Kilonova/mostenire.cpp)
add_executable(GoodIntervals Kilonova/good-intervals.cpp)
add_executable(Teleportation USACO/teleportation.cpp)
add_executable(MilkingOrder USACO/milking-order.cpp)
add_executable(CollectingCoins MIT2/collecting-coins.cpp)
add_executable(DeleteOneDigit MIT2/delete-one-digit.cpp)
add_executable(LarkAndNightingale MyProblems/lark-and-nightingale.cpp)
add_executable(CitySkylines MyProblems/city-skylines.cpp)
add_executable(LuckySudoku MyProblems/lucky-sudoku.cpp)
add_executable(BitShowdown MyProblems/bit-showdown.cpp)
add_executable(BessieAndDominos CodeForces/bessie-and-dominos.cpp)
add_executable(BessieAndSelection CodeForces/bessie-and-selection.cpp)
add_executable(Viitor Kilonova/viitor.cpp)
add_executable(Cowmpetency USACO/cowmpetency.cpp)
add_executable(PotionFarming USACO/potion-farming.cpp)
add_executable(Cowlendar USACO/cowlendar.cpp)
add_executable(CitySkylinesGen MyProblems/city-skylines-gen.cpp)
add_executable(LarryTheLizard MyProblems/larry-the-lizard.cpp)
add_executable(Numinum Kilonova/numinum.cpp)
add_executable(FactoradicFactory HSCSA/factoradic-factory.cpp)
add_executable(JefferyAndNewYears HSCSA/jeffery-and-new-years.cpp)
add_executable(Lemans Kilonova/lemans.cpp)
add_executable(Fibosnek Kilonova/fibosnek.cpp)
add_executable(FlightRoutes USACO/flight-routes.cpp)
add_executable(Visits USACO/visits.cpp)
add_executable(SubsetEquality USACO/subset-equality.cpp)
add_executable(COWOperations USACO/COW-operations.cpp)
add_executable(MilkPumping USACO/milk-pumping.cpp)
add_executable(TargetPracticeII USACO/target-practice-ii.cpp)
add_executable(Moorbles USACO/moorbles.cpp)
add_executable(TestTubes USACO/test-tubes.cpp)
add_executable(RangeReconstruction USACO/range-reconstruction.cpp)
add_executable(Pietricele Kilonova/pietricele.cpp)
add_executable(Bolovani Kilonova/bolovani.cpp)
add_executable(VladAndAvodingX CodeForces/vlad-and-avoding-x.cpp)
add_executable(VladAndTroubleAtMIT CodeForces/vlad-and-trouble-at-MIT.cpp)
add_executable(MilkExchangeBronze USACO/milk-exchange-bronze.cpp)
add_executable(MilkExchangeGold USACO/milk-exchange-gold.cpp)
add_executable(TriNumArray USACOGuide/tri-num-array.cpp)
add_executable(BalancedDifference USACOGuide/balanced-difference.cpp)
add_executable(ProducingDigits USACOGuide/producing-digits.cpp)
add_executable(FarmerJohnCities USACOGuide/farmer-jon-cities.cpp)
add_executable(TwoWayHomework USACOGuide/two-way-homework.cpp)
add_executable(CheatingTheGroupSystem USACOGuide/cheating-the-group-system.cpp)
add_executable(SoccerLeague USACOGuide/soccer-league.cpp)
add_executable(XYQueries Kilonova/xyqueries.cpp)
add_executable(BessiesInterview USACO/bessies-interview.cpp)
add_executable(PaintingFencePosts USACO/painting-fence-posts.cpp)
add_executable(MooLanguage USACO/moo-language.cpp)
add_executable(GregorMaxLength Kilonova/gregor-max-len.cpp)
add_executable(BinarySearch CodeForces/binary-search.cpp)
add_executable(KirillAndMushrooms CodeForces/kirill-and-mushrooms.cpp)
add_executable(Calancea Kilonova/calancea.cpp)
add_executable(Opsir Kilonova/opsir.cpp)
add_executable(BessiesBirthdayCake CodeForces/bessie-birthday-cake.cpp)
add_executable(LearnToPaint CodeForces/learn-to-paint.cpp)
add_executable(Birocratie Kilonova/birocratie.cpp)
add_executable(Frequencies Kilonova/frequencies.cpp)
add_executable(YogurtSale CodeForces/yogurt-sale.cpp)
add_executable(ProgressiveSquare CodeForces/progressive-square.cpp)
add_executable(InhabitantOfTheDeepSea CodeForces/inhabitant-of-the-deep-sea.cpp)
add_executable(InaccurateSubsequenceSearch CodeForces/inaccurate-subsequence-search.cpp)
add_executable(LongInversions CodeForces/long-inversions.cpp)
add_executable(GCDOnAGrid CodeForces/gcd-on-a-grid.cpp)
add_executable(Nestemate Kilonova/nestemate.cpp)
add_executable(EQ4 Kilonova/EQ4.cpp)
add_executable(Castel Kilonova/castel.cpp)
add_executable(PaintingTheRibbon CodeForces/painting-the-ribbon.cpp)
add_executable(MakeItUgly CodeForces/make-it-ugly.cpp)
add_executable(LongMultiplication CodeForces/long-multiplication.cpp)
add_executable(Turnuri Kilonova/turnuri.cpp)
add_executable(Asort Kilonova/asort.cpp)
add_executable(Nebuni Kilonova/nebuni.cpp)
add_executable(FSB Kilonova/fsb.cpp)
add_executable(VIP Kilonova/vip.cpp)
add_executable(Stickogon CodeForces/stickogon.cpp)
add_executable(ABITOfConstruction CodeForces/a-BIT-of-a-construction.cpp)
add_executable(HowDoesTheRookMove CodeForces/how-does-the-rook-move.cpp)
add_executable(RunningMiles CodeForces/running-miles.cpp)
add_executable(LCSOnPermutations CodeForces/LCS-on-permuations.cpp)
add_executable(CardExchange CodeForces/card-exchange.cpp)
add_executable(RectangleFilling CodeForces/rectangle-filling.cpp)
add_executable(EverythingNim CodeForces/everything-nim.cpp)
add_executable(DreamsApprentice CALICO/dreams-apprentice.cpp)
add_executable(StringSurgery CALICO/string-surgery.cpp)
add_executable(GibNebPerilousPlot CALICO/gib-neb-perilous-plot.cpp)
add_executable(EvenSubarrays CodeForces/even-subarrays.cpp)
add_executable(MissingSubsequenceSum CodeForces/missing-subsequence-sum.cpp)
add_executable(Expresie Kilonova/expresie.cpp)
add_executable(Kmajo Kilonova/kmajo.cpp)
add_executable(Pictura Kilonova/pictura.cpp)
add_executable(Secv9 Kilonova/secv9.cpp)
add_executable(ConsecutiveMaxDiff CSAcademy/consecutive-max-diff.cpp)
add_executable(CatFoxDoubleMax CodeForces/cat-fox-double-max.cpp)
add_executable(BitwiseOperationWizard CodeForces/bitwise-operation-wizard.cpp)
add_executable(Compresie Kilonova/compresie.cpp)
add_executable(AndrewAndStones CodeForces/andrew-and-stones.cpp)
add_executable(YetAnotherMinimizationProblem CodeForces/yet-another-minimization-problem.cpp)
add_executable(SetConstruction CodeForces/set-construction.cpp)
add_executable(JobInterview CodeForces/job-interview.cpp)
add_executable(DataStructureFan CodeForces/data-structure-fan.cpp)
add_executable(NenesMagicalMatrix CodeForces/nenes-magical-matrix.cpp)
add_executable(TheNumberOfImposters CodeForces/the-number-of-imposters.cpp)
add_executable(DidWeGetEverythingCovered CodeForces/did-we-get-everything-covered.cpp)
add_executable(GCDSequence CodeForces/GCD-sequence.cpp)
add_executable(CreatingWords CodeForces/creating-word.cpp)
add_executable(MaxMultipleSum CodeForces/max-multiple-sum.cpp)
add_executable(GoodPrefixes CodeForces/good-prefixes.cpp)
add_executable(ManhattanCircle CodeForces/manhattan-circle.cpp)
add_executable(SecretBox CodeForces/secret-box.cpp)
add_executable(FinalBoss CodeForces/final-boss.cpp)
add_executable(MaxLargestComponent CodeForces/max-largest-component.cpp)
add_executable(DoraAndSearch CodeForces/dora-and-search.cpp)
add_executable(MoscowGorillas CodeForces/moscow-gorillas.cpp)
add_executable(KoxiaAndNumberTheory CodeForces/koxia-and-number-theory.cpp)
add_executable(AddModulo10 CodeForces/add-modulo-10.cpp)
add_executable(Sirpal CodeForces/sirpal.cpp)
add_executable(NeneAndTheMEXOperator CodeForces/nene-and-the-mex-operator.cpp)
add_executable(QuizMaster CodeForces/quiz-master.cpp)
add_executable(BeautifulArray CodeForces/beautiful-array.cpp)
add_executable(Soccer CodeForces/soccer.cpp)
add_executable(CollatzConjecture CodeForces/collatz-conjecture.cpp)
add_executable(BoringDay CodeForces/boring-day.cpp)
add_executable(BeautyOfTheMountains CodeForces/beauty-of-the-mountains.cpp)
add_executable(CatchTheCoin CodeForces/catch-the-coin.cpp)
add_executable(SubstringAndSubsequence CodeForces/substring-and-subsequence.cpp)
add_executable(TwoMovies CodeForces/two-movies.cpp)
add_executable(SmithingSkill CodeForces/smithing-skill.cpp)
add_executable(MathematicalProblem CodeForces/mathematical-problem.cpp)
add_executable(Cochilie CodeForces/cochilie.cpp)
add_executable(TommysToy Kilonova/tommys-toy.cpp)
add_executable(SetToMax CodeForces/set-to-max.cpp)
add_executable(DoubleRow SZKOpul/double-row.cpp)
add_executable(ByElevatorOrStairs CodeForces/by-elevator-or-stairs.cpp)
add_executable(WarehouseStore SZKOpul/warehouse-store.cpp)
add_executable(ScoreOfATree CodeForces/score-of-a-tree.cpp)
add_executable(ArrayDivisibility CodeForces/array-divisibility.cpp)
add_executable(CornerTwist CodeForces/corner-twist.cpp)
add_executable(HaveYourCakeAndEatItToo CodeForces/have-your-cake-and-eat-it-too.cpp)
add_executable(Xor Kilonova/xor.cpp)
add_executable(WarehouseStoreSZKOpul Kilonova/warehouse-store.cpp)
add_executable(Cokolade COCI/cokolade.cpp)
add_executable(Sabor COCI/sabor.cpp)
add_executable(Parametriziran COCI/parametriziran.cpp)
add_executable(Scoazze Kilonova/scoazze.cpp)
add_executable(WormholeSort USACO/wormhole-sort.cpp)
add_executable(Aranjare Kilonova/aranjare.cpp)
add_executable(TreeCutting CodeForces/tree-cutting.cpp)
add_executable(SplitTheMultiset CodeForces/split-the-multiset.cpp)
add_executable(MakeMajority CodeForces/make-majority.cpp)
add_executable(IncreasingSequenceWithFixedOR CodeForces/increasing-sequence-with-fixed-or.cpp)
add_executable(TheOmnipotentMonsterKiller CodeForces/the-omnipotent-monster-killer.cpp)
add_executable(DiverseGame CodeForces/diverse-game.cpp)
add_executable(HungryGames CodeForces/hungry-games.cpp)
add_executable(FunnyGame CodeForces/funny-game.cpp)
add_executable(FunGame CodeForces/fun-game.cpp)
add_executable(SubmissionBait CodeForces/submission-bait.cpp)
add_executable(ArrayCraft CodeForces/array-craft.cpp)
add_executable(MadMADSum CodeForces/mad-MAD-sum.cpp)
add_executable(GridPuzzle CodeForces/grid-puzzle.cpp)
add_executable(IncreasingByModulo CodeForces/increasing-by-modulo.cpp)
add_executable(ThreeLogos CodeForces/three-logos.cpp)
add_executable(ReplaceTheNumbers CodeForces/replace-the-numbers.cpp)
add_executable(FriendlySpiders CodeForces/friendly-spiders.cpp)
add_executable(RestoreGraph CodeForces/restore-graph.cpp)
add_executable(TwoSets CodeForces/two-sets.cpp)
add_executable(RemoveTheBracket CodeForces/remove-the-bracket.cpp)
add_executable(CheckTranscription CodeForces/check-transcription.cpp)
add_executable(ClosestPoint CodeForces/closest-point.cpp)
add_executable(GameWithDoors CodeForces/game-with-doors.cpp)
add_executable(SplittingItems CodeForces/splitting-items.cpp)
add_executable(ColoredPortals CodeForces/colored-portals.cpp)
add_executable(BigBrush CodeForces/big-brush.cpp)
add_executable(ParkingLots MASCO/parking-lots.cpp)
add_executable(BrooklinePaths MASCO/brookline-paths.cpp)
add_executable(FastestRouteInMassachusetts MASCO/fastest-route-in-massachusetts.cpp)
add_executable(ConnectingUniversities CodeForces/connecting-universities.cpp)
add_executable(Substring CodeForces/substring.cpp)
add_executable(SkylinePhoto CodeForces/skyline-photo.cpp)
add_executable(DirectingEdges CodeForces/directing-edges.cpp)
add_executable(StringMatching CSES/string-matching.cpp)
add_executable(CensoringSilver USACO/censoring-silver.cpp)
add_executable(MakeAllEqual CodeForces/make-all-equal.cpp)
add_executable(GeneratePermutation CodeForces/generate-permutation.cpp)
add_executable(GuessTheTree CodeForces/guess-the-tree.cpp)
add_executable(FindingPeriods CSES/finding-periods.cpp)
add_executable(String InfoArena/string.cpp)
add_executable(Arbore3 InfoArena/arbore3.cpp)
add_executable(Rufe Kilonova/rufe.cpp)
add_executable(Copii Kilonova/copii.in.cpp)
add_executable(FarmerJohnSolves3Sum USACO/threesum.cpp)
add_executable(Cobb CodeForces/cobb.cpp)
add_executable(SakurakosExam CodeForces/sakurakos-exam.cpp)
add_executable(SquareOrNot CodeForces/square-or-not.cpp)
add_executable(LongestGoodArray CodeForces/longest-good-array.cpp)
add_executable(SakurakosHobby CodeForces/sakurakos-hobby.cpp)
add_executable(AlternatingString CodeForces/alternating-string.cpp)
add_executable(SakurakosBox CodeForces/sakurakos-box.cpp)
add_executable(SakurakosTask CodeForces/sakurakos-task.cpp)
add_executable(ConstantPalindromeSum CodeForces/constant-palindrome-sum.cpp)
add_executable(ShellGame USACO/shell-game.cpp)
add_executable(MixingMilk USACO/mixing-milk.cpp)
add_executable(AncientManuscript BOI/ancient-manuscript.cpp)
add_executable(Minimize CodeForces/minimize.cpp)
add_executable(OsuMania CodeForces/osu-mania.cpp)
add_executable(TheLegendOfFreyaTheFrog CodeForces/the-legend-of-freya-the-frog.cpp)
add_executable(SatyamAndCounting CodeForces/satyam-and-counting.cpp)
add_executable(KleesSuperDuperLargeArray CodeForces/klees-super-duper-large-array.cpp)
add_executable(Fireflys-Queries CodeForces/fireflys-queries.cpp)
add_executable(MooRouteII USACO/moo-route-ii.cpp)
add_executable(Armchairs CodeForces/armchairs.cpp)
add_executable(BusTripEstonia BOI/bus-trip-estonia.cpp)
add_executable(SimplePalindrome CodeForces/simple-palindrome.cpp)
add_executable(TheStrictTeacher CodeForces/the-strict-teacher.cpp)
add_executable(LazyNarek CodeForces/lazy-narek.cpp)
add_executable(MultiplayerMoo USACO/multiplayer-moo.cpp)
add_executable(Labyrinth CodeForces/labyrinth.cpp)
add_executable(CarryBit Kilonova/carry-bit.cpp)
add_executable(WalkTheLine MetaHackerCup/walk-the-line.cpp)
add_executable(LineByLine MetaHackerCup/line-by-line.cpp)
add_executable(Polygon BOI/polygon.cpp)
add_executable(PowerProducts CodeForces/power-product.cpp)
add_executable(MinimizeTheDifference CodeForces/minimize-the-difference.cpp)
add_executable(DoraAndCPlusPlus CodeForces/dora-and-c-plus-plus.cpp)
add_executable(Ace Kilonova/ace.cpp)
add_executable(HossamAndTrainees CodeForces/hossam-and-trainees.cpp)
add_executable(DivGame AtCoder/div-game.cpp)
add_executable(Secv Kilonova/secv.cpp)
add_executable(Fadema Kilonova/fadema.cpp)
add_executable(RobinHelps CodeForces/robin-helps.cpp)
add_executable(RobinHoodAndTheMajorOakTree CodeForces/robin-hood-and-the-major-oak.cpp)
add_executable(RobinHoodInTown CodeForces/robin-hood-in-town.cpp)
add_executable(RobertHoodAndMrsHood CodeForces/robert-hood-and-mrs-hood.cpp)
add_executable(ArrayDifferentiation CodeForces/array-differentiation.cpp)
add_executable(TrainingSession CodeForces/training-session.cpp)
add_executable(MaximumOfGCDS CodeForces/maximum-of-gcds.cpp)
add_executable(Rendez-vousDeMarianEtRobin CodeForces/rendez-vous-de-mariane-et-robin.cpp)
add_executable(Struguri Kilonova/struguri.cpp)
add_executable(LuckyPermutation CodeForces/lucky-permutation.cpp)
add_executable(CyclicOperations CodeForces/cyclic-operations.cpp)
add_executable(Poseidon Kilonova/poseidon.cpp)
add_executable(Kth Kilonova/kth.cpp)
add_executable(AttributeChecks CodeForces/attribute-checks.cpp)
add_executable(QEDsFavoritePermutation CodeForces/qeds-favorite-permutation.cpp)
add_executable(PlanetsQueriesII CSES/planets-queries-ii.cpp)
add_executable(Quintomania CodeForces/quintomania.cpp)
add_executable(Startup CodeForces/startup.cpp)
add_executable(AnyaAnd1100 CodeForces/anya-and-1100.cpp)
add_executable(ILove1543 CodeForces/i-love-1543.cpp)
add_executable(ReverseTheRivers CodeForces/reverse-the-rivers.cpp)
add_executable(SantasBot CodeForces/santas-bot.cpp)
add_executable(2PlusDoor CodeForces/2-plus-door.cpp)
add_executable(XORificator3000 CodeForces/xorificator-3000.cpp)
add_executable(Crocks Kilonova/crocks.cpp)
add_executable(AlicesAdventuresInChess CodeForces/alices-adventures-in-chess.cpp)
add_executable(AlicesAdventuresInPermuting CodeForces/alices-adventures-in-permuting.cpp)
add_executable(AlicesAdventuresInCuttingCake CodeForces/alices-adventures-in-cutting-cake.cpp)
add_executable(AlicesAdventuresInCards CodeForces/alices-adventures-in-cards.cpp)
add_executable(OnesAndTwos CodeForces/ones-and-twos.cpp)
add_executable(AbsoluteBeauty CodeForces/absolute-beauty.cpp)
add_executable(Azugand Kilonova/azugand.cpp)
add_executable(Oreo CALICO/oreo.cpp)
add_executable(CALICOnstruction CALICO/caliconstruction.cpp)
add_executable(Scv CALICO/scv.cpp)
add_executable(Fortnite CALICO/fortnite.cpp)
add_executable(Bridge CALICO/bridge.cpp)
add_executable(Literally1984 CALICO/literally1984.cpp)
add_executable(HamiltonianWall CodeForces/hamiltonian-wall.cpp)
add_executable(SharkySurfing CodeForces/sharky-surfing.cpp)
add_executable(FavoriteSequences Indigo/favorite-sequences.cpp)
add_executable(CifJump Indigo/cifjump.cpp)
add_executable(CircularBarn USACO/cbarn.cpp)
add_executable(SnowBoots USACO/snow-boots.cpp)
add_executable(ConnectedComponents CodeForces/connected-components.cpp)
add_executable(Ezlulu Kilonova/ezlulu.cpp)
add_executable(DirectoryTraversal USACO/dirtraverse.cpp)
add_executable(BalancedPhoto USACO/balanced-photo.cpp)
add_executable(BlackCells CodeForces/black-cells.cpp)
add_executable(AddZeros CodeForces/add-zeros.cpp)
add_executable(Day1Part1-2024 AdventOfCode/2024/day1-part1-2024.cpp)
add_executable(Day1Part2-2024 AdventOfCode/2024/day1-part2-2024.cpp)
add_executable(Day2Part1-2024 AdventOfCode/2024/day2-part1-2024.cpp)
add_executable(Day2Part2-2024 AdventOfCode/2024/day2-part2-2024.cpp)
add_executable(Day3Part1-2024 AdventOfCode/2024/day3-part1-2024.cpp)
add_executable(AllPossibleDigits CodeForces/all-possible-digits.cpp)
add_executable(RestoreThePermutation CodeForces/restore-the-permutation.cpp)
add_executable(Recommendations CodeForces/recommendations.cpp)
add_executable(Camelot CodeForces/camelot.cpp)
add_executable(ValiantsNewMap CodeForces/valiants-new-map.cpp)